Added most popular dish for today

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,12 +16,19 @@
 </h1>
 
 <h2>
-    המנה הכי מבוקשת (אתמול)
+    ד"וח המנות הפופלריות- יומי
 </h2>
 
-<h2 class="most-ordered-dish">
-
-</h2>
+<table id="dish-popular-daily-report" class="pure-table pure-table-bordered" >
+    <thead>
+    <tr>
+        <th>מנה</th>
+        <th>מספר הפעמים שנרכש</th>
+    </tr>
+    </thead>
+    <tbody>
+    </tbody>
+</table>
 
 <h2>
     דו"ח חברות
@@ -51,7 +58,7 @@
 </table>
 
 <h2>
-    דו"ח המנות הפופלריות
+    ד"וח המנות הפופלריות- חודשי
 </h2>
 <table id="dish-popular-report" class="pure-table pure-table-bordered" >
     <thead>
