--- a/frontend/index.html
+++ b/frontend/index.html
@@ -24,6 +24,7 @@
     <tr>
         <th>מנה</th>
         <th>מספר הפעמים שנרכש</th>
+        <th>מסעדה</th>
     </tr>
     </thead>
     <tbody>
@@ -65,6 +66,7 @@
     <tr>
         <th>מנה</th>
         <th>מספר הפעמים שנרכש</th>
+        <th>מסעדה</th>
     </tr>
     </thead>
     <tbody>
